crates/weft-snapshots/tests/snapshots/swiftui-data/corpus-account.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-account as swiftui-data
---
// Generated by `weft swiftui` from the Weft screen "account".
// Regenerate it from the .weft source, or edit it and read it back with
// `weft import-swiftui`; the `weft…` helpers at the end carry what SwiftUI cannot say.

import Observation
import SwiftUI

/// The data the screen reads and writes.
@Observable
final class AccountModel {
    var account: AccountData = AccountData()
    var errors: ErrorsData = ErrorsData()
    var labels: LabelsData = LabelsData()
    var saved: Bool = false

    /// Every property, defaulting to the value it is declared with.
    init(
        account: AccountData = AccountData(),
        errors: ErrorsData = ErrorsData(),
        labels: LabelsData = LabelsData(),
        saved: Bool = false
    ) {
        self.account = account
        self.errors = errors
        self.labels = labels
        self.saved = saved
    }

    struct AccountData: Hashable, Sendable {
        var name: String = ""
        var age: String = ""
        var locked: Bool = false
        var handle: String = ""
        var bio: String = ""
        var email: String = ""
        var newsletter: Bool = false
        var `public`: Bool = false
        var verified: Bool = false
        var plan: String = ""
        var language: String = ""
    }

    struct ErrorsData: Hashable, Sendable {
        var age: String = ""
    }

    struct LabelsData: Hashable, Sendable {
        var pro: String = ""
        var french: String = ""
        var cancel: String = ""
        var help: String = ""
    }
}

extension AccountModel {
    /// The sample data the screen was generated with.
    static var sample: AccountModel {
        AccountModel(
            account: AccountData(
                name: "Ada Lovelace",
                age: "17",
                locked: false,
                handle: "ada",
                bio: "Wrote the first program.",
                email: "ada@example.com",
                newsletter: true,
                `public`: false,
                verified: true,
                plan: "pro",
                language: "fr"
            ),
            errors: ErrorsData(
                age: "You must be 18 or older."
            ),
            labels: LabelsData(
                pro: "Pro",
                french: "Français",
                cancel: "Cancel",
                help: "Help"
            ),
            saved: false
        )
    }
}

/// The host actions the screen names.
enum AccountAction: String, CaseIterable, Sendable {
    case accountSave = "account.save"
    case accountEdit = "account.edit"
    case accountCancel = "account.cancel"
}

/// What the host receives when the screen fires an action.
struct AccountEvent: Sendable, Equatable {
    var action: AccountAction
    /// The id of the element that fired it.
    var id: String
    /// The data path of the list item it came from, e.g. `$.todos.2`.
    var item: String?
}

/// The design tokens the screen uses.
struct AccountTheme: Sendable {
}

struct AccountScreen: View {
    @Bindable var model: AccountModel
    var theme = AccountTheme()
    var perform: (AccountEvent) -> Void = { _ in }
    @Environment(\.openURL) private var openURL

    var body: some View {
        VStack(alignment: .leading) {
            Text("Edit account")
                .font(.largeTitle)
                .accessibilityHeading(.h1)
                .accessibilityAddTraits(.isHeader)
                .accessibilityIdentifier("title")
            Form {
                Section {
                    TextField("Full name", text: $model.account.name, prompt: Text("Ada Lovelace"))
                        .weftFieldType("text")
                        .onChange(of: model.account.name) { send(.accountEdit, "name") }
                        .weftProp("state", "valid")
                        .accessibilityIdentifier("name")
                    TextField("Age", text: $model.account.age)
                        .weftFieldType("number")
                        .weftProp("error", model.errors.age)
                        .weftProp("state", "invalid")
                        .accessibilityIdentifier("age")
                    TextField("Handle", text: $model.account.handle, prompt: Text("{handle}"))
                        .disabled(model.account.locked)
                        .accessibilityIdentifier("handle")
                    TextField("Bio", text: $model.account.bio, axis: .vertical)
                        .accessibilityIdentifier("bio")
                    TextField("Email", text: $model.account.email)
                        .weftFieldType("email")
                        .disabled(true)
                        .accessibilityIdentifier("email")
                    Toggle("Send me the newsletter", isOn: $model.account.newsletter)
                        .toggleStyle(WeftCheckboxStyle())
                        .onChange(of: model.account.newsletter) { send(.accountEdit, "newsletter") }
                        .accessibilityIdentifier("newsletter")
                    Toggle("Terms accepted", isOn: .constant(true))
                        .toggleStyle(WeftCheckboxStyle())
                        .disabled(true)
                        .accessibilityIdentifier("terms")
                    Toggle("Public profile", isOn: $model.account.`public`)
                        .toggleStyle(.switch)
                        .onChange(of: model.account.`public`) { send(.accountEdit, "public") }
                        .disabled(!model.account.verified)
                        .accessibilityIdentifier("public")
                    Picker("Plan", selection: $model.account.plan) {
                        Text("Free")
                            .tag("free")
                            .accessibilityIdentifier("plan-free")
                        Text(model.labels.pro)
                            .tag("pro")
                            .accessibilityIdentifier("plan-pro")
                        Text("Team")
                            .tag("team")
                            .disabled(true)
                            .accessibilityIdentifier("plan-team")
                    }
                    .pickerStyle(.inline)
                    .onChange(of: model.account.plan) { send(.accountEdit, "plan") }
                    .accessibilityIdentifier("plan")
                    Picker("Language", selection: $model.account.language) {
                        Text("English")
                            .tag("en")
                            .accessibilityIdentifier("language-en")
                        Text(model.labels.french)
                            .tag("fr")
                            .accessibilityIdentifier("language-fr")
                    }
                    .onChange(of: model.account.language) { send(.accountEdit, "language") }
                    .disabled(model.account.locked)
                    .accessibilityIdentifier("language")
                    Text("Internal note: never shown.")
                        .accessibilityIdentifier("internal")
                        .weftHidden(true)
                    GroupBox {
                        Text("Your changes were saved.")
                    }
                    .backgroundStyle(Color.green.opacity(0.15))
                    .accessibilityElement(children: .contain)
                    .accessibilityIdentifier("saved")
                    .weftHidden(!model.saved)
                } footer: {
                    Button {
                        submit("account-form")
                    } label: {
                        Text("Save")
                    }
                    .buttonStyle(.borderedProminent)
                    .weftProp("state", "busy")
                    .accessibilityIdentifier("save")
                    Button {
                        send(.accountCancel, "cancel")
                    } label: {
                        Text(model.labels.cancel)
                    }
                    .buttonStyle(.bordered)
                    .weftProp("state", "idle")
                    .accessibilityIdentifier("cancel")
                    Button {
                        openLink("https://example.com/help")
                    } label: {
                        Text(model.labels.help)
                    }
                    .buttonStyle(.borderless)
                    .accessibilityRemoveTraits(.isButton)
                    .accessibilityAddTraits(.isLink)
                    .accessibilityIdentifier("help")
                }
            }
            .onSubmit { send(.accountSave, "account-form") }
            .weftProp("state", "invalid")
            .accessibilityElement(children: .contain)
            .accessibilityLabel("Account")
            .accessibilityIdentifier("account-form")
        }
        .accessibilityElement(children: .contain)
        .accessibilityLabel("Edit account")
        .accessibilityIdentifier("account")
    }

    private func send(_ action: AccountAction, _ id: String, item: String? = nil) {
        perform(AccountEvent(action: action, id: id, item: item))
    }

    /// A submit button fires its form's submit action.
    private func submit(_ form: String) {
        switch form {
        case "account-form": send(.accountSave, "account-form")
        default: break
        }
    }

    private func openLink(_ href: String) {
        if let url = weftURL(href) { openURL(url) }
    }
}

#Preview {
    AccountScreen(model: .sample)
}

// MARK: - Weft helpers
// Weft semantics SwiftUI has no modifier for. `fileprivate`, so every generated screen carries
// its own copy and several screens can live in one module.

fileprivate extension View {
    /// A Weft attribute SwiftUI cannot express; kept so the screen imports back unchanged.
    func weftProp(_ name: String, _ value: String) -> some View { self }
    func weftProp(_ name: String, _ value: Bool) -> some View { self }
    func weftProp(_ name: String, _ value: Int) -> some View { self }
    func weftProp(_ name: String, _ value: Double) -> some View { self }
    /// Removes the view from layout and accessibility while `hidden` is true.
    func weftHidden(_ hidden: Bool) -> some View { modifier(WeftHidden(hidden: hidden)) }
    /// Reads and shows a date-picker's text in UTC: the text is a calendar date, not an instant.
    func weftUTC() -> some View { environment(\.timeZone, TimeZone(secondsFromGMT: 0) ?? .current) }
    /// Marks the text field and option menu beside it as one Weft combobox.
    func weftCombobox() -> some View { self }
    /// Names the `<each>` element the repeated content came from.
    func weftEach(_ id: String) -> some View { self }
    /// The keyboard a text field of this Weft `type` asks for.
    func weftFieldType(_ type: String) -> some View {
        #if os(iOS)
        switch type {
        case "email": return AnyView(self.keyboardType(.emailAddress).textInputAutocapitalization(.never))
        case "number": return AnyView(self.keyboardType(.decimalPad))
        case "search": return AnyView(self.submitLabel(.search))
        default: return AnyView(self)
        }
        #else
        return self
        #endif
    }
}

fileprivate struct WeftHidden: ViewModifier {
    let hidden: Bool
    func body(content: Content) -> some View {
        if !hidden { content }
    }
}

fileprivate struct WeftCheckboxStyle: ToggleStyle {
    func makeBody(configuration: Configuration) -> some View {
        Button { configuration.isOn.toggle() } label: {
            HStack {
                Image(systemName: configuration.isOn ? "checkmark.square.fill" : "square")
                configuration.label
            }
        }
        .buttonStyle(.plain)
        .accessibilityValue(configuration.isOn ? "checked" : "unchecked")
    }
}

/// Only web and mail links open; anything else in a document is ignored.
fileprivate func weftURL(_ href: String) -> URL? {
    guard let url = URL(string: href) else { return nil }
    switch url.scheme?.lowercased() {
    case "http", "https", "mailto", nil: return url
    default: return nil
    }
}

// Weft reads any value as text, a flag or a number (SPEC §2.1); these convert the model's types.
fileprivate func weftText(_ v: Int) -> String { String(v) }
fileprivate func weftText(_ v: Bool) -> String { v ? "true" : "false" }
fileprivate func weftText(_ v: Double) -> String {
    v.isFinite && v == v.rounded() && abs(v) < 1e15 ? String(Int(v)) : String(v)
}
fileprivate func weftText<T>(_ v: T) -> String { "" }
// An array or object is true even when empty (SPEC §2.1): only the model's scalars can be false.
fileprivate func weftOn<T>(_ v: T) -> Bool { true }
fileprivate func weftInt(_ v: String) -> Int { Int(v) ?? 0 }
fileprivate func weftInt(_ v: Bool) -> Int { v ? 1 : 0 }
fileprivate func weftInt(_ v: Double) -> Int { v.isFinite && abs(v) < 1e15 ? Int(v.rounded()) : 0 }
fileprivate func weftInt<T>(_ v: T) -> Int { 0 }
// Only plain decimal text is a number; `0x10`, `inf` and `nan` are data that does not fit.
fileprivate func weftDouble(_ v: String) -> Double {
    let t = v.trimmingCharacters(in: .whitespaces)
    guard !t.contains(where: { "xX".contains($0) }), let d = Double(t), d.isFinite else { return 0 }
    return d
}
fileprivate func weftDouble(_ v: Bool) -> Double { v ? 1 : 0 }
fileprivate func weftDouble<T>(_ v: T) -> Double { 0 }
fileprivate func weftColumns(_ v: Int) -> Int { max(1, v) }
fileprivate func weftHeadingLevel(_ v: Int) -> AccessibilityHeadingLevel {
    switch min(max(v, 1), 6) { case 1: .h1; case 2: .h2; case 3: .h3; case 4: .h4; case 5: .h5; default: .h6 }
}
fileprivate func weftHeadingFont(_ v: Int) -> Font {
    switch min(max(v, 1), 6) { case 1: .largeTitle; case 2: .title; case 3: .title2; case 4: .title3; case 5: .headline; default: .subheadline }
}

// The number controls. A `ClosedRange` traps when its bounds are reversed, so every range a
// document can set goes through these, which apply the reference renderer's rules.
fileprivate func weftRange(_ lo: Double?, _ hi: Double?) -> ClosedRange<Double> {
    let low = lo.flatMap { $0.isFinite ? $0 : nil } ?? 0
    let high = hi.flatMap { $0.isFinite ? $0 : nil } ?? 100
    return low...max(high, low)
}
fileprivate func weftBounds(_ lo: Double?, _ hi: Double?) -> ClosedRange<Double> {
    let low = lo.flatMap { $0.isFinite ? $0 : nil } ?? -Double.greatestFiniteMagnitude
    let high = hi.flatMap { $0.isFinite ? $0 : nil } ?? Double.greatestFiniteMagnitude
    return low...max(high, low)
}
fileprivate func weftStep(_ s: Double?) -> Double { s.flatMap { $0.isFinite && $0 > 0 ? $0 : nil } ?? 1 }

// A date-picker's value is text in a fixed format (SPEC §5.1); SwiftUI wants a `Date`. Text that
// is not exactly a date of that format reads as the epoch, because `DatePicker` cannot be blank.
fileprivate func weftFormatter(_ type: String) -> DateFormatter {
    let f = DateFormatter()
    f.locale = Locale(identifier: "en_US_POSIX")
    f.timeZone = TimeZone(secondsFromGMT: 0)
    switch type {
    case "time": f.dateFormat = "HH:mm"
    case "datetime": f.dateFormat = "yyyy-MM-dd'T'HH:mm"
    default: f.dateFormat = "yyyy-MM-dd"
    }
    return f
}
fileprivate func weftDate(_ text: Binding<String>, _ type: String = "date") -> Binding<Date> {
    Binding(
        get: {
            let f = weftFormatter(type)
            let t = text.wrappedValue
            // The parser accepts `2025-1-5`; Weft's format has fixed widths.
            guard let d = f.date(from: t), f.string(from: d) == t else { return Date(timeIntervalSince1970: 0) }
            return d
        },
        set: { text.wrappedValue = weftFormatter(type).string(from: $0) }
    )
}
fileprivate func weftDates(_ lo: String, _ hi: String, _ type: String = "date") -> ClosedRange<Date> {
    let f = weftFormatter(type)
    let low = f.date(from: lo) ?? .distantPast
    let high = f.date(from: hi) ?? .distantFuture
    return low...max(high, low)
}
fileprivate func weftComponents(_ type: String) -> DatePickerComponents {
    switch type { case "time": [.hourAndMinute]; case "datetime": [.date, .hourAndMinute]; default: [.date] }
}

// A color-picker's value is `#rrggbb` text; anything else shows black.
fileprivate func weftColor(_ hex: Binding<String>) -> Binding<Color> {
    Binding(
        get: {
            let s = hex.wrappedValue
            let digits = s.hasPrefix("#") ? String(s.dropFirst()) : ""
            guard digits.count == 6, digits.allSatisfy(\.isHexDigit), let n = UInt32(digits, radix: 16) else { return .black }
            return Color(.sRGB, red: Double((n >> 16) & 255) / 255, green: Double((n >> 8) & 255) / 255, blue: Double(n & 255) / 255, opacity: 1)
        },
        set: { hex.wrappedValue = weftHex($0) }
    )
}
fileprivate func weftHex(_ c: Color) -> String {
    // Through Core Graphics, not UIKit or AppKit, so the one helper serves every platform.
    let space = CGColorSpace(name: CGColorSpace.sRGB)
    let parts = space.flatMap { c.cgColor?.converted(to: $0, intent: .defaultIntent, options: nil) }?.components ?? []
    func byte(_ i: Int) -> Int { i < parts.count ? Int((min(max(Double(parts[i]), 0), 1) * 255).rounded()) : 0 }
    return String(format: "#%02x%02x%02x", byte(0), byte(1), byte(2))
}
